# Refactored_ORB_SLAM2

./: .gitignore  Build.bat  Build.sh  Build_Source.sh  Build_ThirdParty.bat  ForWSL2Users.md  README.md  install_vckpg_dependencies.bat  vcpkg.json
.github/workflows/: main.yml  msbuild.yml  nuget.yml  readme.yml  test.yml
Evaluation/: kitti_to_tum.py
Experiments/: corr_exp_fr1xyz.txt  corr_exp_fr2xyz.txt  corr_exp_fr3nnf.txt  correlation_analysis.ipynb
Scripts/: Build_Resources.sh  Build_Source.bat  Build_Source.sh  Build_ThirdParty.bat  Build_ThirdParty.sh  ValidateVCPKG.bat
Source/: CMakeLists.txt
Source/Examples/: CMakeLists.txt
Source/Examples/FBoW/: CMakeLists.txt  train_fbow.cpp
Source/Examples/Monocular/: CMakeLists.txt  EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Source/Examples/Not_Supported/GCN2/: create_voc.cc  rgbd_gcn.cc
Source/Examples/RGB-D/: CMakeLists.txt  TUM1.yaml  TUM2.yaml  TUM3.yaml  rgbd_tum.cc
Source/Examples/Stereo/: CMakeLists.txt  EuRoC.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  stereo_euroc.cc  stereo_kitti.cc
Source/Libraries/ORB_SLAM2/: CMakeLists.txt
Source/Libraries/ORB_SLAM2/include/: AKAZEextractor.h  AbstractExtractor.h  Associater.h  BRISKextractor.h  CorrelationEdge.h  CorrelationMatcher.h  FbowVocabulary.h  FeatureExtractor.h  FeatureExtractorFactory.h  FeaturePoint.h  Frame.h  FrameDrawer.h  Initializer.h  KAZEextractor.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  Optimizer.h  PnPsolver.h  SIFTextractor.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
Source/Libraries/ORB_SLAM2/src/: AKAZEextractor.cc  AbstractExtractor.cc  Associater.cc  BRISKextractor.cc  Converter.cc  CorrelationMatcher.cc  FeatureExtractor.cc  FeatureExtractorFactory.cc  FeaturePoint.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KAZEextractor.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBVocabulary.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  SIFTextractor.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
Source/Resources/: CMakeLists.txt
Source/Resources/ORB/: CMakeLists.txt
Source/Resources/Tools/: CMakeLists.txt  bin_vocabulary.cc
Source/Resources/Vocabulary/: CMakeLists.txt
