install(FILES orb_mur.fbow DESTINATION ${DEFAULT_VOCABULARY_DIR})
install(FILES akaze_cv.fbow DESTINATION ${DEFAULT_VOCABULARY_DIR})
install(FILES sift_cv.fbow DESTINATION ${DEFAULT_VOCABULARY_DIR})
install(FILES brisk_cv.fbow DESTINATION ${DEFAULT_VOCABULARY_DIR})
install(FILES kaze_cv.fbow DESTINATION ${DEFAULT_VOCABULARY_DIR})